...

                <TextView
                    android:id="@+id/sensor_data_card_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/sensor_data_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/sensor_data_txt_id_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/sensor_data_id_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/sensor_data_txt_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sensor_data_btn_copy"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
...
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/sensor_data_btn_copy_sensor_id"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/sensor_data_txt_sleep_mode_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/sensor_data_sleep_mode_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/sensor_data_sleep_mode_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:id="@+id/sensor_data_sleep_mode_auto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/sensor_data_watering_card_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/sensor_data_watering_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/sensor_data_watering_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/sensor_data_watering_duration"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/sensor_data_slider_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:id="@+id/sensor_data_watering_auto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/sensor_data_switch_water_auto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/sensor_data_editing_card_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/sensor_data_editing_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sensor_data_et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sensor_data_et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sensor_data_btn_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sensor_data_btn_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
