...


    <string name="toast_error_empty_fields">Please fill all required fields</string>
    <string name="toast_reg_success">Registration is successful</string>
    <string name="toast_reg_failed">Failed to register. Try again.</string>
    <string name="toast_reset_success">Password send to your email</string>
    <string name="toast_login_success">Login is successful</string>
    <string name="toast_login_failed">Login failed</string>
    <string name="toast_dialog_empty_sensor_name">Please try again and give your sensor a name</string>
    <string name="toast_dialog_delete_success">Account Deleted</string>
    <string name="toast_menu_log_out">Logged Out</string>
    <string name="toast_update_success">User details updated</string>
    <string name="toast_update_failed">Something is wrong</string>
    <string name="toast_copy_id_success">User Id successfully copied</string>
    <string name="toast_sensor_data_copy_id_success">Sensor Id successfully copied</string>
    <string name="toast_sensor_data_set_watering_slider_success_1">"Watering duration successfully sets for "</string>
    <string name="toast_sensor_data_set_watering_slider_success_2">" sec"</string>
    <string name="toast_sensor_data_set_sleep_mode_slider_success_1">"Sleep Mode for sensor successfully sets for "</string>
    <string name="toast_sensor_data_set_sleep_mode_slider_success_2">" min"</string>
    <string name="toast_sensor_data_set_slider_failed">Something is wrong. Setting impossible</string>
    <string name="toast_sensor_data_auto_watering_on">Auto Watering successfully turn on</string>
    <string name="toast_sensor_data_auto_watering_off">Auto Watering turn off</string>
    <string name="toast_sensor_data_auto_watering_error">Something is wrong. Setting impossible</string>
    <string name="toast_sensor_data_update_success">Sensor Data updated</string>
    <string name="toast_sensor_data_update_failed">Something is wrong. Updating impossible</string>
    <string name="toast_sensor_data_dialog_delete">Sensor deleted</string>
    <string name="toast_about_add_copied_success">Link successfully copied</string>
    <string name="toast_sensor_data_auto_sleep_mode_on">Auto Sleep Mode successfully turn on</string>
    <string name="toast_sensor_data_auto_sleep_mode_off">Auto Sleep Mode turn off</string>

...
